--- a/charts/templates/pdb.yaml
+++ b/charts/templates/pdb.yaml
@@ -1,4 +1,7 @@
 {{- if .Values.podDisruptionBudget.enabled }}
+{{- if and .Values.podDisruptionBudget.minAvailable .Values.podDisruptionBudget.maxUnavailable }}
+{{- fail "podDisruptionBudget: cannot set both minAvailable and maxUnavailable" }}
+{{- end }}
 {{- if not (or .Values.podDisruptionBudget.minAvailable .Values.podDisruptionBudget.maxUnavailable) }}
 {{- fail "podDisruptionBudget.enabled is true but neither minAvailable nor maxUnavailable is set" }}
 {{- end }}
