--- a/configs/adapter.yaml
+++ b/configs/adapter.yaml
@@ -17,7 +17,7 @@ metadata:
 
 spec:
   adapter:
-    version: "0.0.1"
+    version: "0.1.0"
 
   hyperfleetApi:
     timeout: 2s
@@ -40,7 +40,7 @@ spec:
       type: "string"
       default: "v1"
       description: "API version to use"
-      required: true
+      required: false
 
     - name: "hyperfleetApiToken"
       source: "env.HYPERFLEET_API_TOKEN"
