--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -86,40 +86,28 @@ resources:
     memory: 128Mi
 
 # Liveness probe configuration (per HyperFleet health-endpoints standard)
+# Uses K8s defaults: initialDelaySeconds=0, periodSeconds=10, timeoutSeconds=1, failureThreshold=3
 livenessProbe:
   enabled: true
   httpGet:
     path: /healthz
     port: 8080
-  initialDelaySeconds: 15
-  periodSeconds: 20
-  timeoutSeconds: 5
-  failureThreshold: 3
-  successThreshold: 1
 
 # Readiness probe configuration (per HyperFleet health-endpoints standard)
+# Uses K8s defaults: initialDelaySeconds=0, periodSeconds=10, timeoutSeconds=1, failureThreshold=3
 readinessProbe:
   enabled: true
   httpGet:
     path: /readyz
     port: 8080
-  initialDelaySeconds: 5
-  periodSeconds: 10
-  timeoutSeconds: 3
-  failureThreshold: 3
-  successThreshold: 1
 
 # Startup probe configuration (useful for slow-starting containers)
+# Uses K8s defaults when enabled
 startupProbe:
   enabled: false
   httpGet:
     path: /healthz
     port: 8080
-  initialDelaySeconds: 10
-  periodSeconds: 10
-  timeoutSeconds: 5
-  failureThreshold: 30
-  successThreshold: 1
 
 # Lifecycle hooks
 lifecycle: {}
