--- a/configs/templates/job.yaml
+++ b/configs/templates/job.yaml
@@ -10,6 +10,7 @@ metadata:
     hyperfleet.io/job-type: "validation"
     hyperfleet.io/resource-type: "job"
     hyperfleet.io/managed-by: "{{ .metadata.name }}"
+    hyperfleet.io/generation: "{{ .generationSpec }}"
 spec:
   template:
     metadata:
