HYPERFLEET-534 - fix: minor coderabbit comments

--- a/test/integration/config-loader/testdata/adapter-config-template.yaml
+++ b/test/integration/config-loader/testdata/adapter-config-template.yaml
@@ -388,5 +388,5 @@ spec:
       - name: "reportClusterStatus"
         apiCall:
           method: "POST"
-          url: "{{ .hyperfleetApiBaseUrl }}/api/{{ .hyperfleetApiVersion }}/clusters/{{ .clusterId }}/status"
+          url: "{{ .hyperfleetApiBaseUrl }}/api/{{ .hyperfleetApiVersion }}/clusters/{{ .clusterId }}/statuses"
           body: "{{ .clusterStatusPayload }}"
