--- a/test/integration/config-loader/testdata/adapter_config_valid.yaml
+++ b/test/integration/config-loader/testdata/adapter_config_valid.yaml
@@ -189,7 +189,7 @@ spec:
       - name: "reportClusterStatus"
         apiCall:
           method: "POST"
-          url: "{{ .hyperfleetApiBaseUrl }}/api/{{ .hyperfleetApiVersion }}/clusters/{{ .clusterId }}/status"
+          url: "{{ .hyperfleetApiBaseUrl }}/api/{{ .hyperfleetApiVersion }}/clusters/{{ .clusterId }}/statuses"
           headers:
             - name: "Authorization"
               value: "Bearer {{ .hyperfleetApiToken }}"
