HYPERFLEET-569 - feat: Implement maestro DSL loader

--- a/charts/examples/adapter-task-config.yaml
+++ b/charts/examples/adapter-task-config.yaml
@@ -76,7 +76,31 @@ spec:
 
   # Resources with valid K8s manifests
   resources:
+    - name: "maestro"
+      transport:
+        client: "maestro"
+        maestro:
+          targetCluster: cluster1
+      manifest:
+        apiVersion: v1
+        kind: Namespace
+        metadata:
+          name: "maestro-{{ .clusterId }}"
+          labels:
+            hyperfleet.io/cluster-id: "{{ .clusterId }}"
+            hyperfleet.io/cluster-name: "{{ .clusterName }}"
+          annotations:
+            hyperfleet.io/generation: "{{ .generationSpec }}"
+      discovery:
+        namespace: "*"  # Cluster-scoped resource (Namespace)
+        bySelectors:
+          labelSelector:
+            hyperfleet.io/cluster-id: "{{ .clusterId }}"
+            hyperfleet.io/cluster-name: "{{ .clusterName }}"
+
     - name: "clusterNamespace"
+      transport:
+        client: "kubernetes"
       manifest:
         apiVersion: v1
         kind: Namespace
@@ -98,6 +122,8 @@ spec:
     # in the namespace created above
     # it will require a service account to be created in that namespace as well as a role and rolebinding
     - name: "jobServiceAccount"
+      transport:
+        client: "kubernetes"
       manifest:
         ref: "/etc/adapter/job-serviceaccount.yaml"
       discovery:
@@ -107,6 +133,8 @@ spec:
             hyperfleet.io/cluster-id: "{{ .clusterId }}"
 
     - name: "job_role"
+      transport:
+        client: "kubernetes"
       manifest:
         ref: "/etc/adapter/job-role.yaml"
       discovery:
@@ -118,6 +146,8 @@ spec:
             hyperfleet.io/resource-type: "role"
 
     - name: "job_rolebinding"
+      transport:
+        client: "kubernetes"
       manifest:
         ref: "/etc/adapter/job-rolebinding.yaml"
       discovery:
@@ -129,6 +159,8 @@ spec:
             hyperfleet.io/resource-type: "rolebinding"
 
     - name: "jobNamespace"
+      transport:
+        client: "kubernetes"
       manifest:
         ref: "/etc/adapter/job.yaml"
       discovery:
@@ -143,6 +175,8 @@ spec:
     # and using the same service account as the adapter
 
     - name: "deploymentNamespace"
+      transport:
+        client: "kubernetes"
       manifest:
         ref: "/etc/adapter/deployment.yaml"
       discovery:
